--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="refresh" content="5">    
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <meta name="application-name" content="Velhect" />
 
@@ -54,7 +55,7 @@
                           </svg>
                     </div>
                     <div class="station__voltage__value">
-                         <p>220V</p>   
+                         <p class="station__voltage__value_p">220V</p>   
                     </div>
                </div> 
 
@@ -63,10 +64,10 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-battery-half" viewBox="0 0 16 16">
                             <path d="M2 6h5v4H2V6z"/>
                             <path d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h10zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8z"/>
-                          </svg>
+                        </svg>
                     </div>
                     <div class="station__inverterbattery__value">
-                        <p>60%</p>   
+                        <p class="station__inverterbattery__value_p">60%</p>   
                     </div>
                 </div> 
 
@@ -77,10 +78,9 @@
                           </svg>
                     </div>
                 </div> 
-           </div> 
-           
+           </div>   
         </section>
     </main>
-
+    <script src="script.js"></script>
   </body>
 </html>
