--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta http-equiv="refresh" content="5">    
+    <!-- <meta http-equiv="refresh" content="5">     -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <meta name="application-name" content="Velhect" />
 
@@ -55,7 +55,7 @@
                           </svg>
                     </div>
                     <div class="station__voltage__value">
-                         <p class="station__voltage__value_p">220V</p>   
+                         <p class="station__voltage__value_p"></p>   
                     </div>
                </div> 
 
@@ -67,15 +67,13 @@
                         </svg>
                     </div>
                     <div class="station__inverterbattery__value">
-                        <p class="station__inverterbattery__value_p">60%</p>   
+                        <p class="station__inverterbattery__value_p"></p>   
                     </div>
                 </div> 
 
                 <div class="station__powerind">
                     <div class="station__powerind__icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
-                            <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z"/>
-                          </svg>
+                       
                     </div>
                 </div> 
            </div>   
