--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
            </div>   
         </section>
     </main>
-    <script src="script.js"></script>
+    <script src="script.js?v=3"></script>
   </body>
 </html>
